# Testing

./: .clang-format  .clang-format_CI  .clang-tidy  CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  Main.cpp  pull_request_template.md  sonar-project.properties
.github/workflows/: PrEdit.yml  cpp.yml  sonarcloud.yaml  status.yml
DemoTesting/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  Main.cpp
